Updated flags and file encoding, added original logs configs