@@ -37,5 +37,9 @@
 -XX:+UseCompressedOops
 -XX:-OmitStackTraceInFastThrow
 -Dawt.useSystemAAFontSettings=lcd
+-Dfile.encoding=UTF-8
+-Xverify:none
 
--Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
+-XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
+-Xbootclasspath/a:../lib/boot.jar
